# apuli

./: .gitignore  5_letter_words.txt  6_letter_words.txt  Cargo.toml  NOTICE.MD  README.MD  benchmarking.typ
apuli-cli/: Cargo.toml
apuli-cli/src/: main.rs
apuli-dbg/: Cargo.toml
apuli-dbg/src/: app.rs  bench.rs  games.rs  main.rs
apuli-dbg/src/views/: benchmark.rs  menu.rs  mod.rs  util.rs
apuli-lib/: 5_letter_words.txt  6_letter_words.txt  Cargo.toml
apuli-lib/src/: bench.rs  information.rs  lib.rs  util.rs
apuli-ui/: Cargo.toml  NOTICE.MD  index.html
apuli-ui/src/: main.rs
apuli-ui/src/components/: board.rs  elements.rs  game.rs  input.rs  keyboard.rs  manager.rs  mod.rs
apuli-ui/static/: styles.css
src/: main.rs
