[package]
name = "apuli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "apuli-cli",
    "apuli-lib",
    "apuli-ui",
]

[profile.release]
lto = true
debug = false
codegen-units = 1
opt-level = 'z'
debug-assertions = false
# strip = true # THIS breaks things in apuli-ui
