[package]
name = "apuli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "apuli_lib"
path = "apuli-lib/src/lib.rs"

# [[bin]] isn't specified because apuli-cli is pretty much deprecated

[workspace]
members = [
    "apuli-cli",
    "apuli-lib",
    "apuli-ui",
    "apuli-dbg"
]

[profile.release]
lto = true
debug = false
codegen-units = 1
opt-level = 'z'
debug-assertions = false
# strip = true # THIS breaks things in apuli-ui
