[package]
name = "apuli-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
information = []


[dependencies]


# will eventually customize release builds per package..
# [profile.release]
# lto = true
# debug = false
# codegen-units = 1
# opt-level = 3 # this needs to be fast, not small
# debug-assertions = false
# strip = true # this could be stripped
