[package]
name = "apuli-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"]}
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
apuli-lib = {path = "../apuli-lib"}

