[package]
name = "apuli-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
apuli-lib = {path = "../apuli-lib"}

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
strip = true
debug-assertions = false
